# rusticker

./: Cargo.toml  LICENSE  README.md
background_remover/: Cargo.toml
background_remover/src/: lib.rs  stickerize.rs
main/: Cargo.toml
main/src/: lib.rs  main.rs  stickerize.rs
mask_generator/: Cargo.toml
mask_generator/src/: lib.rs
packager/macos/: check-version.sh  package.sh
packager/windows/: package.ps1  package.sh
packager/windows/winget/1.1.5/: drkbugs.rusticker.installer.yaml  drkbugs.rusticker.locale.en-US.yaml
packager/windows/winget/1.1.6/: drkbugs.rusticker.installer.yaml
pdf_generator/: Cargo.toml
pdf_generator/src/: lib.rs
src/: lib.rs  main.rs
stickerize/: Cargo.toml
stickerize/src/: main.rs
