[package]
name = "background_remover"
version = "1.1.6"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.0", features = ["png", "jpeg", "webp"] }
webp = "0.3.0"
tract-onnx = "0.23.3"
tract-core = "0.23.3"
tract-hir = "0.23.3"
tract-cuda = "0.23.3"
ureq = { version = "2.10.1", features = ["tls"] }
ndarray = "0.15"
