[package]
name = "rusticker"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
printpdf = { version = "0.9.1", features = ["images", "png", "jpeg"] }
image = { version = "0.25.0", features = ["png", "jpeg", "webp"] }
mask_generator = { path = "../mask_generator" }
tract-onnx = "0.23.3"
ureq = { version = "2.10.1", features = ["tls"] }
ndarray = "0.15"
