[package]
name = "pdf_generator"
version = "1.1.6"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
printpdf = { version = "0.9.1", features = ["images", "png", "jpeg"] }
image = { version = "0.25.0", features = ["png", "jpeg", "webp"] }
mask_generator = { path = "../mask_generator" }
